# Vision2Voice-Understanding-Images-using-Deep-Learning-Computer-Vision-and-Text-to-Speech

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  model.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_vision2voice.bat
.github/workflows/: ci.yml  docker-build.yml
Saved_Models3/: modelConcat_1_11.h5  modelConcat_1_13.h5  modelConcat_1_14.h5  modelConcat_1_15.h5  modelConcat_1_16.h5  modelConcat_1_17.h5  modelConcat_1_18.h5  modelConcat_1_19.h5  modelConcat_1_20.h5  modelConcat_1_22.h5  modelConcat_1_23.h5  modelConcat_1_24.h5  modelConcat_1_25.h5  modelConcat_1_28.h5  modelConcat_1_29.h5  modelConcat_1_30.h5  modelConcat_1_31.h5  modelConcat_1_33.h5  modelConcat_1_34.h5  modelConcat_1_35.h5  modelConcat_1_36.h5  modelConcat_1_37.h5  modelConcat_1_38.h5  modelConcat_1_39.h5  modelConcat_1_40.h5  modelConcat_1_41.h5  modelConcat_1_42.h5  modelConcat_1_43.h5  modelConcat_1_44.h5  modelConcat_1_45.h5  modelConcat_1_46.h5  modelConcat_1_47.h5  modelConcat_1_48.h5  modelConcat_1_50.h5  modelConcat_1_52.h5  modelConcat_1_53.h5  modelConcat_1_54.h5  modelConcat_1_55.h5  modelConcat_1_58.h5  modelConcat_1_59.h5  (+2 more)
app/: streamlit_app.py
capstone_data_2/: Object_Captions.ipynb  Test.ipynb  Untitled0.ipynb  caption_train_tokenizer.pkl  descriptions.txt  features_new.pkl  test_captions_concate_beam10_post  test_captions_concate_beam5_post  test_captions_post_concat  test_captions_post_concat2
capstone_data_2/Finalised Code File _ Do Not Edit This/: Image_Captioning_ Basic.ipynb  Text Summarisation
capstone_data_2/Saved_Models3/: loss_accuracy.xlsx  modelConcat_1_49.h5  modelConcat_1_51.h5  modelConcat_1_56.h5  modelConcat_1_57.h5  modelConcat_1_61.h5  modelConcat_1_62.h5  modelConcat_1_63.h5  modelConcat_1_64.h5  modelConcat_1_66.h5  modelConcat_1_67.h5  modelConcat_1_68.h5  modelConcat_1_69.h5  modelConcat_1_70.h5  modelConcat_1_71.h5  modelConcat_1_72.h5  modelConcat_1_73.h5  modelConcat_1_74.h5  modelConcat_1_75.h5  modelConcat_1_76.h5  modelConcat_1_77.h5  modelConcat_1_78.h5  modelConcat_1_79.h5  modelConcat_1_80.h5  modelConcat_1_81.h5  modelConcat_1_82.h5  modelConcat_1_83.h5  modelConcat_1_84.h5  modelConcat_1_85.h5  modelConcat_1_86.h5  modelConcat_1_87.h5  modelConcat_1_88.h5  modelConcat_1_89.h5  modelConcat_1_9.h5  (+10 more)
configs/: default.yaml
data/: README.md  descriptions.txt
docs/: api_reference.md  architecture.md  dataset.md
scripts/: run.bat  run.sh
tests/: conftest.py
(+31 files in other folders)
