[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vision2voice"
version = "1.0.0"
description = "AI-powered image analysis and text-to-speech pipeline using Deep Learning and Computer Vision"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Aniruddh Kulkarni", email = "anikulks@gmail.com" }
]
requires-python = ">=3.9"
keywords = ["computer-vision", "deep-learning", "image-captioning", "text-to-speech", "yolo", "vgg16", "lstm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "tensorflow>=2.12",
    "keras>=2.12",
    "opencv-python>=4.7",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "ultralytics>=8.0",
    "cvzone>=1.6",
    "gTTS>=2.3",
    "nltk>=3.8",
    "Pillow>=9.5",
    "tabulate>=0.9",
    "streamlit>=1.28",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "flake8>=6.1",
    "black>=23.0",
    "isort>=5.12",
    "pre-commit>=3.5",
    "mypy>=1.5",
]

[project.urls]
Homepage = "https://github.com/Aniruddh-11-stack/Vision2Voice-Understanding-Images-using-Deep-Learning-Computer-Vision-and-Text-to-Speech"
Repository = "https://github.com/Aniruddh-11-stack/Vision2Voice-Understanding-Images-using-Deep-Learning-Computer-Vision-and-Text-to-Speech"
Issues = "https://github.com/Aniruddh-11-stack/Vision2Voice-Understanding-Images-using-Deep-Learning-Computer-Vision-and-Text-to-Speech/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "app", "tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
